Change to fixed width font
In order to write code, git messages, and similar things,
adjusted the font to be fixed width (monospace).

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
     background-color: #EEE; 
     margin: 20px;
     padding: 0; 
-    font-family: sans-serif; 
+    font-family: monospace; 
     font-size: 16px;
 }
 textarea {
@@ -23,7 +23,7 @@ textarea {
     background-color: white;
     resize: none;
     overflow: auto;
-    font-family: sans-serif;
+    font-family: monospace;
     font-size: 16px;
     color: #444;
 }
