Hide scroll bars, regardless of size

--- a/app/main.css
+++ b/app/main.css
@@ -10,6 +10,7 @@ body {
     padding: 0; 
     font-family: monospace; 
     font-size: 16px;
+    overflow: hidden;
 }
 textarea {
     display: block;
