--- a/app/main.css
+++ b/app/main.css
@@ -61,4 +61,11 @@ span {
     ul {
         max-width: 400px;
     }
-  }
+}
+
+/* printing */
+@media print {
+    #toolbox {
+        visibility: hidden;
+    }
+}
